# provenant

./: -q  .gitignore  .gitmodules  .license-headers.toml  .markdownlint-cli2.jsonc  .prettierignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  lefthook.yml  package-lock.json  package.json  release.sh  renovate.json  setup.sh
.github/ISSUE_TEMPLATE/: 01-bug.md  02-feature-request.md  03-documentation.md  04-question.md
.github/workflows/: check.yml  nix.yml  release.yml
build_support/: version_format.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI_GUIDE.md  DOCUMENTATION_INDEX.md  HOW_TO_ADD_A_PARSER.md  LICENSE_DETECTION_ARCHITECTURE.md  MIGRATING_FROM_SCANCODE.md  NEWTYPE_OPPORTUNITIES.md  RELEASING.md  SCANCODE_COMPARISON.md  SUPPORTED_FORMATS.md  TESTING_STRATEGY.md
docs/adr/: 0001-trait-based-parsers.md  0002-extraction-vs-detection.md  0003-golden-test-strategy.md  0004-security-first-parsing.md  0005-auto-generated-docs.md  0006-datasourceid-driven-package-assembly.md  0007-embedded-license-index-artifact-strategy.md  0008-output-schema-separation.md  0009-parser-submodule-structure.md  README.md  template.md
docs/audit/: clojure.md  debian.md  hex_lock.md  meson.md  nix.md
docs/implementation-plans/: README.md  UPSTREAM_BUG_AUDIT.md
docs/improvements/: README.md  bitbake-parser.md  cargo-parser.md  carthage-parser.md  cli-workflows.md  compiled-binary-parser.md  conda-parser.md  copyright-detection.md  email-url-detection.md  erlang-otp-parser.md  go-work-parser.md  gradle-lockfile-parser.md  gradle-module-parser.md  hackage-parser.md  helm-parser.md  license-detection.md  maven-parser.md  nix-parser.md  npm-workspace-parser.md  npm-yarn-parser.md  pixi-parser.md  python-parser.md  structured-metadata-parser.md
docs/license-detection/: GAPS.md  PLAN-019-file-region-and-unique-detection.md  PLAN-020-precompute-rule-spdx-expressions.md  position-span-unification.md
docs/license_detection/: LICENSE_MATCH_LIFETIME_REFACTORING.md
docs/parser-audit/: about.md  alpine.md  arch.md  autotools.md  bazel.md  bower.md  buck.md  bun_lock.md  bun_lockb.md  cargo.md  cargo_lock.md  chef.md  citation.md  clojure.md  compiled_binary.md  composer.md  conan.md  conan_data.md  conda.md  conda_meta_json.md  cpan.md  cpan_dist_ini.md  cpan_makefile_pl.md  cran.md  dart.md  debian.md  deno.md  deno_lock.md  docker.md  freebsd.md  gitmodules.md  go.md  go_mod_graph.md  gradle.md  gradle_lock.md  gradle_module.md  hackage.md  haxe.md  helm.md  hex_lock.md  (+55 more)
resources/license_detection/: index_build_policy.toml  legalese_data.txt
scripts/: README.md  benchmark.sh  cargo_sort_manifests.sh  check_crate_size.sh  check_dco_signoff.sh  check_dependency_policy.sh  check_release_version_sync.sh  check_scancode_output_format_sync.sh  check_unused_deps.sh  profile-setup.sh
src/: cli.rs  golden_maintenance.rs  lib.rs  main.rs  main_test.rs  progress.rs  test_support.rs  time.rs  version.rs  version_format.rs
src/assembly/: assemblers.rs  assembly_golden_test.rs  assembly_test.rs  bazel_merge.rs  bazel_prune.rs  cargo_resource_assign.rs  cargo_workspace_merge.rs  composer_resource_assign.rs  conda_rootfs_merge.rs  debian_source_merge.rs  file_ref_resolve.rs  file_ref_resolve_test.rs  hackage_merge.rs  mod.rs  nested_merge.rs  nested_merge_test.rs  nix_flake_compat_merge.rs  npm_resource_assign.rs  npm_workspace_merge.rs  nuget_cpm_resolve.rs  python_requirements_assign.rs  ruby_resource_assign.rs  sibling_merge.rs  swift_merge.rs  topology.rs  windows_update_merge.rs
src/cache/: config.rs  incremental.rs  io.rs  locking.rs  mod.rs
src/cli/: mod.rs
src/copyright/: candidates.rs  credits.rs  detector.rs  detector_author_heuristics.rs  detector_input_normalization.rs  detector_pattern_extract.rs  detector_postprocess_phase.rs  detector_test.rs  detector_tree_walk.rs  golden_test.rs  golden_utils.rs  hints.rs  lexer.rs  lexer_test.rs  line_tracking.rs  mod.rs  parser.rs  parser_test.rs  patterns.rs  patterns_test.rs  prepare.rs  refiner.rs  refiner_author.rs  refiner_test.rs  types.rs
src/finder/: emails.rs  golden_test.rs  host.rs  junk_data.rs  mod.rs  urls.rs
src/license_detection/: aho_match.rs  automaton.rs  build_policy.rs  dataset.rs  embedded_test.rs  golden_test.rs  golden_utils.rs  hash_match.rs  hash_match_test.rs  license_cache.rs  mod.rs  module_tests.rs  position_set.rs  test_utils.rs  tests.rs  token_multiset.rs  token_set.rs  tokenize.rs  unknown_match.rs
src/models/: datasource_id.rs  dependency_uid.rs  diagnostic.rs  digest.rs  file_info.rs  line_number.rs  match_score.rs  mod.rs  output.rs  package_type.rs  package_uid.rs
src/output/: cyclonedx.rs  debian.rs  html.rs  jsonl.rs  mod.rs  public_serialize.rs  shared.rs  spdx.rs  template.rs
src/output_schema/: author.rs  copyright.rs  dependency.rs  email.rs  extra_data.rs  facet_tallies.rs  file_info.rs  file_reference.rs  header.rs  holder.rs  license_clarity_score.rs  license_detection.rs  license_index_provenance.rs  license_match.rs  license_policy_entry.rs  license_reference.rs  license_rule_reference.rs  mod.rs  output.rs  package.rs  package_data.rs  party.rs  resolved_package.rs  serde_helpers.rs  summary.rs  system_environment.rs  tallies.rs  tally_entry.rs  top_level_dependency.rs  top_level_license_detection.rs  url.rs
src/parsers/: about.rs  about_golden_test.rs  about_scan_test.rs  about_test.rs  alpine.rs  alpine_golden_test.rs  alpine_scan_test.rs  android.rs  arch.rs  (+266 more)
testdata/: README.md
testdata/python/golden/poetry_pyproject_groups/: pyproject.toml  pyproject.toml-expected.json
tests/: assembly_golden.rs  copyright_golden.rs  finder_golden.rs  license_detection_golden.rs  output_format_golden.rs  parsers_golden.rs  post_processing_golden.rs  progress_cli_integration.rs  scanner_copyright_credits.rs  scanner_integration.rs  version_format_unit.rs
tools/license-headers/: Cargo.toml  README.md
tools/license-headers/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: common.rs  lib.rs  manifests.rs  repo_cache.rs
(+580 files in other folders)
