[package]
name = "provenant-cli"
version = "0.0.15"
edition = "2024"
repository = "https://github.com/mstykow/provenant"
homepage = "https://github.com/mstykow/provenant"
documentation = "https://github.com/mstykow/provenant/blob/main/docs/DOCUMENTATION_INDEX.md"
description = "Rust-based ScanCode-compatible scanner for licenses, package metadata, SBOMs, and provenance data."
license = "Apache-2.0"
keywords = ["scancode", "sbom", "license", "provenance", "compliance"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
# Include only files needed to build from source
include = [
    "src/**/*",
    "!src/**/*_test.rs",
    "!src/**/test.rs",
    "!src/**/tests.rs",
    "!src/**/*_tests.rs",
    "!src/**/*test_utils.rs",
    "!src/**/test_fixtures.rs",
    "/resources/license_detection/license_index.zst",
    "/Cargo.toml",
    "/Cargo.lock",
    "/ACKNOWLEDGEMENTS.md",
    "/README.md",
    "/CITATION.cff",
    "/LICENSE",
    "/NOTICE",
    "/SECURITY.md",
]

[package.metadata.cargo-machete]
ignored = ["md-5", "kamadak-exif"]

[package.metadata.release]
# Sign git tags with GPG
sign-tag = true
# Push automatically
push = true
# Use a versionless subject because workspace release commits cannot
# reliably interpolate {{version}} in cargo-release 0.25.x.
pre-release-commit-message = "chore: release"
pre-release-replacements = [
    { file = "CITATION.cff", search = '^version: ".*"$', replace = 'version: "{{version}}"' },
    { file = "flake.nix", search = '''version = ".*";''', replace = '''version = "{{version}}";''' },
]
pre-release-hook = ["cargo", "generate-lockfile"]
# Tag message template
tag-message = "Release v{{version}}"
# Publish to crates.io automatically
publish = true

[workspace]
resolver = "3"
members = ["xtask"]

[workspace.metadata.release]
# Consolidated workspace release commits read their subject from workspace config.
pre-release-commit-message = "chore: release"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
inventory = "0.3.24"
lazy_static = "1.5.0"
rayon = "1.11.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tempfile = "3.27.0"
url = "2.5.8"
zstd = "0.13.3"

[lib]
name = "provenant"
path = "src/lib.rs"

[[bin]]
name = "provenant"
path = "src/main.rs"

[features]
default = ["rpm-sqlite"]
golden-tests = []
rpm-sqlite = ["dep:rusqlite"]

[dependencies]
anyhow = { workspace = true }
ar = "0.9"           # Unix ar archive format (for .deb)
base64 = "0.22.1"
bit-set = "0.10.0"
bzip2 = "0.6.1"
chrono = "0.4.44"
clap = { workspace = true }
csv = "1.4.0"
daachorse = "2.0.0"
derive_builder = "0.20.2"
directories = "6.0.0"
env_logger = "0.11.10"
fd-lock = "4.0.4"
file-format = { version = "0.29.0", features = ["reader", "reader-txt", "reader-xml", "reader-zip"] }
file-identify = "0.4.0"
flate2 = "1.1.9"
glob = "0.3.3"
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
inventory = { workspace = true }
json5 = "1.3.1"
kamadak-exif = "0.6.1"
lazy_static = { workspace = true }
liblzma = "0.4.6"
log = "0.4.29"
md-5 = "0.11.0"
mime_guess = "2.0.5"
object = { version = "0.39.0", default-features = false, features = ["read_core", "elf", "macho", "pe"] }
once_cell = "1.21.4"
os_info = "3.14.0"
packageurl = "0.6.0"
pdf_oxide = "0.3.22"
pep508_rs = "0.9.2"
quick-xml = "0.39.2"
rayon = { workspace = true }
regex = { workspace = true }
rmp-serde = { workspace = true }
rpm = { version = "0.20.0", default-features = false, features = ["gzip-compression", "xz-compression", "zstd-compression", "bzip2-compression"] }
ruff_python_ast = { version = "0.15.8", package = "rustpython-ruff_python_ast" }
ruff_python_parser = { version = "0.15.8", package = "rustpython-ruff_python_parser" }
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }
rustc_version_runtime = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.11.0"
sha2 = "0.11.0"
smallvec = { version = "1.15.1", features = ["write"] }
starlark_syntax = "0.13.0"
strum = { version = "0.28.0", features = ["derive"] }
tar = "0.4.45"
tempfile = { workspace = true }
tera = { version = "1.20.1", default-features = false }
toml = "1.1.2"
ttf-parser = "0.25.1"
url = { workspace = true }
uuid = { version = "1.23.0", features = ["v4"] }
yaml_serde = "0.10.4"
zip = "8.5.1"
zstd = { workspace = true }

[dev-dependencies]

[profile.release]
# Enable link-time optimization for better cross-module optimizations
lto = true

# Enable whole-program optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = true
