[package]
name = "provenant-xtask"
version = "0.0.0"
edition = "2024"
publish = false
autobins = false

[[bin]]
name = "update-parser-golden"
path = "src/bin/update_parser_golden.rs"

[[bin]]
name = "update-copyright-golden"
path = "src/bin/update_copyright_golden.rs"

[[bin]]
name = "validate-urls"
path = "src/bin/validate_urls.rs"

[[bin]]
name = "generate-supported-formats"
path = "src/bin/generate_supported_formats.rs"

[[bin]]
name = "update-license-golden"
path = "src/bin/update_license_golden.rs"

[[bin]]
name = "generate-index-artifact"
path = "src/bin/generate_index_artifact.rs"

[[bin]]
name = "benchmark-target"
path = "src/bin/benchmark_target.rs"

[[bin]]
name = "compare-outputs"
path = "src/bin/compare_outputs.rs"

[[bin]]
name = "generate-benchmark-chart"
path = "src/bin/generate_benchmark_chart.rs"

[[bin]]
name = "generate-legalese-artifact"
path = "src/bin/generate_legalese_artifact/main.rs"

[[bin]]
name = "check-license-headers"
path = "src/bin/check_license_headers.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = "0.3.3"
inventory = { workspace = true }
postcard = { workspace = true }
provenant = { path = "..", package = "provenant-cli", features = ["golden-tests"] }
rayon = { workspace = true }
regex = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = "1.1.2"
url = { workspace = true }
yaml_serde = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
