[package]
name = "provenant-license-headers"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
